# jackdaw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  iep.md  jackdaw-handoff.md  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  firewall.sh
.github/workflows/: ci.yml  mypy.yml  pytest.yml  release.yml  ruff.yml  sonarqube.yml
nginx/: nginx.conf  reload-on-cert-change.sh
nginx/bootstrap/: generate-selfsigned.sh
src/jackdaw/: __init__.py  __main__.py  _util.py  acme_errors.py  config.py  main.py  serve.py  worker.py
src/jackdaw/db/: engine.py  models.py
src/jackdaw/dns/: base.py  loader.py
src/jackdaw/dns/providers/: cloudflare.py  namecheap.py  null.py  porkbun.py  route53.py
src/jackdaw/migrations/: env.py
src/jackdaw/migrations/versions/: 0001_initial_schema.py
src/jackdaw/routes/: account.py  authz.py  cert.py  challenge.py  directory.py  health.py  keychange.py  nonce.py  order.py  revoke.py  terms.py
src/jackdaw/schemas/: acme.py
src/jackdaw/services/: cert_store.py  http01.py  jws.py  le_client.py  nonce.py  ownership.py  relay_cert.py
tests/: conftest.py  test_account.py  test_directory.py  test_dns_provider.py  test_engine.py  test_finalize_errors.py  test_http01.py  test_jws.py  test_keychange.py  test_le_client.py  test_main.py  test_nonce.py  test_order.py  test_order_flow.py  test_ownership.py  test_revoke.py  test_serve.py  test_startup.py  test_terms.py  test_version.py
